[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/UI/MainMenu/GameModeSelection.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/MontserratBold-DOWZd.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/Components/PanelButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Components/GameModeBtn.gd" type="Script" id=4]
[ext_resource path="res://src/GameBoard/Difficulties/Resources/Chill.tres" type="Resource" id=5]
[ext_resource path="res://src/GameBoard/Difficulties/Resources/Normal.tres" type="Resource" id=6]
[ext_resource path="res://src/GameBoard/Difficulties/Resources/Hard.tres" type="Resource" id=7]
[ext_resource path="res://src/GameBoard/Difficulties/Resources/Timed.tres" type="Resource" id=8]
[ext_resource path="res://src/UI/CustomDifficulty/CustomDifficultyConfig.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Icons/GuiClose.svg" type="Texture" id=10]
[ext_resource path="res://src/UI/Components/GameModeButton.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 56, 27 ), Vector2( -1200, 27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1200, 27 ), Vector2( 56, 27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="GameModeSelection" type="PopupPanel"]
anchor_left = 0.0546875
anchor_top = 0.045
anchor_right = 0.960938
anchor_bottom = 0.973333
margin_top = -1.90735e-06
rect_clip_content = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 20

[node name="HBox" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 920.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.24

[node name="Label" type="Label" parent="VBoxContainer/HBox"]
margin_left = 327.0
margin_top = 3.0
margin_right = 557.0
margin_bottom = 29.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Choose a game mode"

[node name="Close" type="TextureButton" parent="VBoxContainer/HBox"]
margin_left = 888.0
margin_right = 920.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 10 )
expand = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 920.0
margin_bottom = 548.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 920.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/VBox"]
margin_right = 920.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 30
columns = 2

[node name="Normal" parent="VBoxContainer/ScrollContainer/VBox/GridContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 7.0
margin_right = 404.0
margin_bottom = 137.0
rect_min_size = Vector2( 350, 130 )
rect_pivot_offset = Vector2( 175, 65 )
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 4 )
title = "Normal"
description = "Your queue is limited to 10 blocks."
difficulty = ExtResource( 6 )

[node name="Hard" parent="VBoxContainer/ScrollContainer/VBox/GridContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 516.0
margin_top = 7.0
margin_right = 866.0
margin_bottom = 137.0
rect_min_size = Vector2( 350, 130 )
rect_pivot_offset = Vector2( 175, 65 )
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 4 )
title = "Hard"
description = "Your queue is limited to 5 blocks, and the board is smaller."
difficulty = ExtResource( 7 )

[node name="Timed" parent="VBoxContainer/ScrollContainer/VBox/GridContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 182.0
margin_right = 404.0
margin_bottom = 312.0
rect_min_size = Vector2( 350, 130 )
rect_pivot_offset = Vector2( 175, 65 )
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 4 )
title = "Timed"
description = "Make as many words as you can in 2 minutes. Can override blocks."
difficulty = ExtResource( 8 )

[node name="Chill" parent="VBoxContainer/ScrollContainer/VBox/GridContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 516.0
margin_top = 182.0
margin_right = 866.0
margin_bottom = 312.0
rect_min_size = Vector2( 350, 130 )
rect_pivot_offset = Vector2( 175, 65 )
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 4 )
title = "Chill"
description = "No queue limit, allows 3-letter words, and the speed doesn't change. Can override blocks."
difficulty = ExtResource( 5 )

[node name="Custom" parent="VBoxContainer/ScrollContainer/VBox/GridContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 357.0
margin_right = 404.0
margin_bottom = 487.0
rect_min_size = Vector2( 350, 130 )
rect_pivot_offset = Vector2( 175, 65 )
size_flags_horizontal = 6
size_flags_vertical = 6
title = "Custom"
description = "Set up your own rules"

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "CustomDifficulty", "GameModeButton" ), [ ExtResource( 9 ), ExtResource( 11 ) ] ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
playback_speed = 0.8
anims/RESET = SubResource( 2 )
anims/hide = SubResource( 4 )
anims/show = SubResource( 3 )

[connection signal="pressed" from="VBoxContainer/HBox/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBox/GridContainer/Custom" to="." method="_on_Custom_pressed"]
